cli/lang_tests/redir/file_redirection.msh
// Run:
//   status: success
//   stdout:
//    before
//    ls: ...
//    after
//    1	test-dir
//   stderr:
//    error
//    o

echo before
echo test-dir > working-dir
echo error >&2
ls /error-dont-exist &>&1
echo after

cat -n < working-dir
echo o > working-dir
cat < working-dir >&2
